# discord-test-rs-bot

./: .gitignore  Cargo.toml
src/: cmds.rs  config.rs  main.rs  utils.rs
