[package]
name = "discord-test-rs-bot"
version = "0.1.0"
authors = ["ileukocyte"]
edition = "2021"
categories = ["discord-bot"]
publish = false

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
itertools = "0.10.1"
lazy_static = "1.4.0"
num-format = "0.4.0"
openweather-async = { git = "https://github.com/kilroyjones/openweather-async" }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[dependencies.serenity]
version = "^0.10"
default-features = false
features = ["cache", "client", "collector", "gateway", "model", "rustls_backend", "unstable_discord_api"]
